--- a/components/Utils/translations/uk.json
+++ b/components/Utils/translations/uk.json
@@ -119,5 +119,56 @@
   "orderText": "Ви можете записатися на наші послуги, залишивши свої дані",
   "placeholderName": "Ваше ім'я",
   "placeholderEmail": "Ваш email",
-  "placeholderPhone": "Ваш телефон"
+  "placeholderPhone": "Ваш телефон",
+  "headerBlogNews": ["Блог ", "Новини"],
+  "mainBlog": {
+    "mainBlogHeader": "Життя в гармонії зі собою: Блог та Новини нашого СПА-салону",
+    "mainBlogText": "У нашому блозі та розділі новин ви знайдете найсвіжіші поради з догляду за собою, інсайти з мистецтва релаксу та всі найцікавіші новини з життя нашого СПА-салону. Діліться з нами вашими думками та враженнями, вивчайте та дізнавайтесь більше про світ краси та гармонії разом із нашим експертним командою."
+  },
+  "blogs": [
+    {
+      "id": 1,
+      "blogHeader": "Переваги регулярних візитів до СПА",
+      "blogMainImg": "../../image/blogNews/blog_main_1.png",
+      "blogDescription": "Зняття стресу та релаксація: Як регулярні процедури допомагають зменшити рівень стресу і покращити загальний стан здоров’я. Оздоровлення шкіри: Роль пілінгів, масок та обгортань у підтримці здоров'я та краси шкіри.",
+      "blogtextImg": "../../image/blogNews/blog_small_image_1.png"
+    },
+    {
+      "id": 2,
+      "blogHeader": "Типи масажів та їх переваги",
+      "blogMainImg": "../../image/blogNews/blog_main_2.png",
+      "blogDescription": "Лімфодренажний масаж: Як він допомагає зменшити набряки та покращити циркуляцію лімфи. Шведський масаж: Основні техніки та користь для тіла. Тайський масаж: Традиційні методи та їх вплив на організм.",
+      "blogtextImg": "../../image/blogNews/blog_small_image_2.png"
+    },
+    {
+      "id": 3,
+      "blogHeader": "Пілінги: як обрати найкращий",
+      "blogMainImg": "../../image/blogNews/blog_main_3.png",
+      "blogDescription": "Сольовий скраб: Користь та ефективність у видаленні відмерлих клітин. Скраб з кавою: Як кофеїн стимулює та омолоджує шкіру. Цукровий скраб: Ніжний та ефективний спосіб очищення шкіри.",
+      "blogtextImg": "../../image/blogNews/blog_small_image_3.png"
+    }
+  ],
+  "news": [
+    {
+      "id": 1,
+      "blogHeader": "Спеціальна пропозиція: Знижка на парні відвідування",
+      "blogMainImg": "../../image/blogNews/news_main_1.png",
+      "blogDescription": "У червні ми запускаємо спеціальну акцію для пар: знижка 20% на всі парні процедури! Приходьте разом з коханою людиною та насолоджуйтеся незабутніми моментами релаксу.",
+      "blogtextImg": "../../image/blogNews/news_small_image_1.png"
+    },
+    {
+      "id": 2,
+      "blogHeader": "Літня акція на пілінги",
+      "blogMainImg": "../../image/blogNews/news_main_2.png",
+      "blogDescription": "У літній сезон особливо важливо піклуватися про шкіру. Саме тому ми пропонуємо знижку 30% на всі види пілінгів! Не пропустіть можливість зробити свою шкіру гладенькою та сяючою.",
+      "blogtextImg": "../../image/blogNews/news_small_image_2.png"
+    },
+    {
+      "id": 3,
+      "blogHeader": "Спеціальна пропозиція для нових клієнтів",
+      "blogMainImg": "../../image/blogNews/news_main_3.png",
+      "blogDescription": "Для всіх нових клієнтів нашого СПА-салону діє спеціальна пропозиція: знижка 50% на перший візит. Скористайтеся нагодою та відкрийте для себе світ розкішного релаксу.",
+      "blogtextImg": "../../image/blogNews/news_small_image_3.png"
+    }
+  ]
 }
