--- a/components/Utils/translations/uk.json
+++ b/components/Utils/translations/uk.json
@@ -170,5 +170,114 @@
       "blogDescription": "Для всіх нових клієнтів нашого СПА-салону діє спеціальна пропозиція: знижка 50% на перший візит. Скористайтеся нагодою та відкрийте для себе світ розкішного релаксу.",
       "blogtextImg": "../../image/blogNews/news_small_image_3.png"
     }
+  ],
+  "HeaderCafe": ["Десерти", "Кава", "Спеціальні пропозициї", "Чаї"],
+  "mainCafe": {
+    "mainCafeHeader": "Ласкаво просимо до нашої кав'ярні у спа-салоні!",
+    "mainCafeText": "Поглибіть своє відчуття розкоші та задоволення, насолоджуйтесь ароматним кавовим напоєм у затишній атмосфері нашого закладу. У нашій кав'ярні ви зможете насолодитися широким вибором свіжообсмажених кавових зерен, найкращими чаєвими сортами та апетитними десертами - все це для вашого відпочинку та задоволення. Завітайте до нас сьогодні та даруйте собі миті насолоди та розслаблення!"
+  },
+  "Desserts": [
+    {
+      "id": 1,
+      "name": "Чізкейк „Ягідна фантазія“",
+      "price": "110 грн",
+      "ingredients": "Склад: сир маскарпоне, основа з печива, ягідний соус з чорниці та малини.",
+      "description": "Опис: Ніжний чізкейк з освіжаючим ягідним соусом.",
+      "image": "../../image/cafe/chiscake.png"
+    },
+    {
+      "id": 2,
+      "name": "Торт „Лимонна насолода“",
+      "price": "100 грн",
+      "ingredients": "Склад: лимонний крем, пісочне тісто, меренга.",
+      "description": "Опис: Легкий лимонний торт з хрустким пісочним тістом та ніжною меренгою.",
+      "image": "../../image/cafe/lemon_cake.png"
+    },
+    {
+      "id": 3,
+      "name": "Шоколадний фондан",
+      "price": "120 грн",
+      "ingredients": "Склад: темний шоколад, вершкове масло, яйця, цукор.",
+      "description": "Опис: Гарячий десерт з рідкою шоколадною начинкою, що справжній рай для любителів шоколаду.",
+      "image": "../../image/cafe/Chocolate_fondant.png"
+    }
+  ],
+  "Coffee": [
+    {
+      "id": 1,
+      "name": "Еспресо 'Вершковий шоколад'",
+      "price": "70 грн",
+      "ingredients": "Склад: свіжообсмажені зерна арабіки, темний шоколад, вершки.",
+      "description": "Опис: Інтенсивний еспресо з додаванням темного шоколаду та вершків для ніжного смаку.",
+      "image": "../../image/cafe/espresso.png"
+    },
+    {
+      "id": 2,
+      "name": "Латте 'Карамельне задоволення'",
+      "price": "90 грн",
+      "ingredients": "Склад: еспресо, молоко, карамельний сироп.",
+      "description": "Опис: М'який латте з солодкими нотками карамелі, що робить його ідеальним для будь-якої пори дня.",
+      "image": "../../image/cafe/Latte.png"
+    },
+    {
+      "id": 3,
+      "name": "Капучино 'Ванільний рай'",
+      "price": "85 грн",
+      "ingredients": "Склад: еспресо, молоко, ванільний сироп.",
+      "description": "Опис: Класичний капучино з додаванням ванільного сиропу для витонченого смаку.",
+      "image": "../../image/cafe/cappuccino.png"
+    }
+  ],
+ "specialOffers": [
+    {
+      "id": 1,
+      "name": "Солодкий сніданок",
+      "price": "180 грн",
+      "ingredients": "Склад: кава або чай на вибір, чізкейк 'Ягідна фантазія', свіжовичавлений сік.",
+      "description": "Опис: Ідеальний сніданок для початку дня з насолодою та радістю.",
+      "image": "../../image/cafe/sweet_breakfast.png"
+    },
+    {
+      "id": 2,
+      "name": "Післяобідній чай",
+      "price": "160 грн",
+      "ingredients": "Склад: будь-який чай, торт 'Лимонна насолода', сезонні фрукти.",
+      "description": "Опис: Легка післяобідня перерва з освіжаючим чаєм та смачним десертом.",
+      "image": "../../image/cafe/afternoon_tea.png"
+    },
+    {
+      "id": 3,
+      "name": "Вечірня насолода",
+      "price": "200 грн",
+      "ingredients": "Склад: кава або чай на вибір, шоколадний фондант.",
+      "description": "Опис: Вечірня насолода з елегантним поєднанням шоколаду.",
+      "image": "../../image/cafe/evening_delight.png"
+    }
+  ],
+  "tea": [
+    {
+      "id": 1,
+      "name": "Лавандовий спокій",
+      "price": "75 грн",
+      "ingredients": "Склад: лавандові квіти, м'ята, меліса, ромашка.",
+      "description": "Опис: Ароматний трав'яний чай, який допомагає розслабитися та зняти стрес.",
+      "image": "../../image/cafe/lavender_tea.png"
+    },
+    {
+      "id": 2,
+      "name": "Цитрусовий заряд",
+      "price": "80 грн",
+      "ingredients": "Склад: лимонна цедра, апельсинова цедра, імбир, зелений чай.",
+      "description": "Опис: Освіжаючий чай з цитрусовими нотками та легким пікантним смаком імбиру.",
+      "image": "../../image/cafe/citrus_tea.png"
+    },
+    {
+      "id": 3,
+      "name": "Ягідна симфонія",
+      "price": "85 грн",
+      "ingredients": "Склад: сушені ягоди малини, чорниці, шипшини, гібіскус.",
+      "description": "Опис: Солодкуватий чай з насиченим ягідним смаком та приємною кислинкою.",
+      "image": "../../image/cafe/berry_tea.png"
+    }
   ]
 }
